# AA272-project

./: .gitattributes  .gitignore  README.md
GNSaidedINS_Skog/: main.m
WLS_LLA/: WLS_LLA_lake.csv  WLS_LLA_lake_filtered.csv  WLS_LLA_lake_filtered_0.00025_10.0_1.0.csv  WLS_LLA_lake_filtered_0.00025_10.0_1000.0.csv  WLS_LLA_lake_filtered_1e-05_10.0.csv  WLS_LLA_lake_filtered_5e-05_10.0.csv  WLS_LLA_lake_xy.csv  WLS_LLA_lake_xy_filtered_0.00025_10.0_1.0.csv  WLS_LLA_lake_xy_filtered_0.00028333333333333335_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.00028333333333333335_10.0_10000.0.csv  WLS_LLA_lake_xy_filtered_0.0005166666666666667_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.0005166666666666667_10.0_10000.0.csv  WLS_LLA_lake_xy_filtered_0.00075_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.00075_10.0_10000.0.csv  WLS_LLA_lake_xy_filtered_0.0025_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.005_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.0075_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.0125_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.015_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_0.01_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_5e-05_10.0_1.5.csv  WLS_LLA_lake_xy_filtered_5e-05_10.0_10000.0.csv  WLS_LLA_rand_path.csv  WLS_LLA_rand_path_filtered_0.00025_10.0_1.0.csv  WLS_LLA_rand_path_filtered_0.00025_10.0_1000.0.csv  WLS_LLA_rand_path_xy.csv  WLS_LLA_rand_path_xy_filtered_0.00025_10.0_1.0.csv  WLS_LLA_track.csv  (+31 more)
gnss-running-filter/: pyproject.toml
gnss-running-filter/gnss_running_filter/: accel.py  fusion.py  gyro.py  imu.py  ins_gnss.py  mag.py  readings.py  sensor_fusion_old.py
(+54 files in other folders)
